--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+  <header>
+    <a href="https://www.instagram.com/exudoblues/?hl=pt-br">Instagram do Baco Exu do Blues</a>
+    <a href="https://www.youtube.com/watch?v=4iKtTmnHojU">Samba in Paris</a>
+    <a href="https://www.youtube.com/watch?v=Sq7pVppXesU">20 Ligações</a>
+  </header>
    <h1>Baco Exu do Blues</h1> 
    <p><strong>Baco Exu do Blues</strong> é um rapper, cantor e compositir brasileiro. Seu nome verdadeiro é <strong>Diogo Alvaro Ferreira Moncorvo</strong>, nascido em Salvador, Bahia em 11 de janeiro de 1996. Hoje em dia o cantor tem 28 anos de ideda e 13 anos de carrera musical com os gêneros MPB, hip hop, rap e blues.</p>
     <p>O nome <strong>Baco Exu do Blues</strong> é a fusão de Baco(o deus romano do vinho e dos excessos), Exu(o mensageiro dos orixás) e Blues, o "primeiro ritmo a formar pretos ricos"</p>
