--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
       <p> Baco começou a ganhar popularidade após o lançamento da faixa Sulicídio,composta em 2016 com o rapper Diomedes  Chinaski, em que ambos fazem críticas aos cenário nacional do rap, concentrado na região Sudeste, principalmente nos estados de Rio de Janeiro e São Paulo, dando mais visibilidade para as regiões Nordeste e Norte. Dentre as principais características de Baco estão suas fortes metáforas com letras cruas e poéticas, que falam sobre amor, poder, religião e sociedade. Em 2017, Baco Exu do Blues foi premiado como Artista Revelação pelo Prêmio Multishow de Música Brasileira. O artista também teve a sua canção "Te Amo Disgraça" eleita a Canção do Ano.</p>
            <img src="bacoexudoblues-1-980x880.jpg">
            
-           <ol><h2> Top 5 músicas mais famosas do Baco</h2></ol>
+           <ol>
+            <h2> Top 5 músicas mais famosas do Baco</h2>
            <li>Melhor Só</li>
            <li>Hotel cantor</li>
            <li>Samba in Paris</li>
            <li>20 Ligações</li>
            <li>Flamingos</li>
+           </ol>
 </body>
 </html>
